[project]
name = "bepi-region-prediction"
version = "0.1.0"
description = "Using MESSENGER magnetospheric region observations to make statistically-based predictions for BepiColombo spacecraft"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hermpy",
]

[tool.uv.sources]
hermpy = { git = "https://github.com/daraghhollman/hermpy.git" }
