[project]
name = "bepi-region-prediction"
version = "0.1.0"
description = "Using MESSENGER magnetospheric region observations to make statistically-based predictions for BepiColombo spacecraft"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.2.0",
    "h5py>=3.15.1",
    "hermpy",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "planetary-coverage>=1.2.1",
    "scipy>=1.17.0",
    "sunpy>=7.1.0",
]

[tool.uv.sources]
hermpy = { git = "https://github.com/daraghhollman/hermpy-1.0.0.git" }
